--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   ],
   "dependencies": {
     "bin-wrapper": "^3.0.2",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "scala-bin": "^0.2.0"
   }
 }
