--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "binary"
   ],
   "dependencies": {
-    "bin-wrapper": "^3.0.2",
-    "path": "^0.11.14",
-    "scala-bin": "^0.2.0"
+    "bin-wrapper": "^3.0.2"
   }
 }
+
