--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "binary"
   ],
   "dependencies": {
-    "bin-wrapper": "^3.0.2"
+    "bin-wrapper": "^3.0.2",
+    "bluebird": "^2.9.34"
   }
 }
-
