--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scalajsc": "node cli/scalajsc.js -version",
     "scalajsld": "node cli/scalajsld.js -version",
     "scalajsp": "node cli/scalajsp.js -version",
-    "postinstall": "scala-bin-install"
+    "postinstall": "node install.js"
   },
   "bin": {
     "scalajsc": "cli/scalajsc.js",
@@ -38,6 +38,6 @@
   "dependencies": {
     "bin-wrapper": "^3.0.2",
     "bluebird": "^2.9.34",
-    "scala-bin": "^0.3.2"
+    "scala-bin": "^0.3.3"
   }
 }
